--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link data-rh="true" rel="icon" type="image/png" href="professional-portfolio.png"><title>Victor Ccorimanya | Portfolio</title><link rel="icon" href="/professional-portfolio.png"><script defer="defer" src="./bundle.js"></script></head><style>/*
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link data-rh="true" rel="icon" type="image/png" href="professional-portfolio.png"><title>Victor Ccorimanya | Portfolio</title><link rel="icon" href="/vccfavicon.png"><script defer="defer" src="/bundle.js"></script></head><style>/*
     1. Use a more-intuitive box-sizing model.
   */
   *, *::before, *::after {
