--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link data-rh="true" rel="icon" type="image/png" href="professional-portfolio.png">
+  <link data-rh="true" rel="icon" type="image/png" href="vccfavicon.png">
   <title>Victor Ccorimanya | Portfolio</title>
 </head>
 <style>
